--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/schematics": "^13.3.3",
     "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.12",
     "@angular/compiler": "~8.2.12",
